fix booking and add procedure